update paper url

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				</td>
 				<td align=center width=200px>
 					<center>
-						<span style="font-size:20px">Y-Tech, Kuaishou Technology</span>
+						<span style="font-size:20px">Y-tech, Kuaishou Technology</span>
 					</center>
 				</td>
 				<td align=center width=175px>
@@ -199,7 +199,7 @@
 			<tr>
 				<td align=center width=200px> <span style="font-size:15pt">
 						<center>
-							<a href="">[Paper]</a>
+							<a href="https://arxiv.org/abs/2110.11728">[Paper]</a>
 
 						</center>
 				</td>
@@ -365,7 +365,7 @@
 			<tr>
 				<td><span style="font-size:14pt">
 						<center>
-							<a href="">[Paper]</a> |
+							<a href="https://arxiv.org/abs/2110.11728">[Paper]</a> |
 							<a href="./index_files/bibtex_blendgan.txt">[Bibtex]</a>
 						</center>
 				</td>
